some base styling

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,10 @@
 
-body {
+body, html {
     height: 100%;
+    font-size: 62.5%;
+    font-family: monospace;
+}
+
+*, *::before, *::after {
+    box-sizing: border-box;
 }
