--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,10 +1,12 @@
-
-body, html {
-    height: 100%;
-    font-size: 62.5%;
-    font-family: monospace;
+body,
+html {
+  height: 100%;
+  font-size: 62.5%;
+  font-family: monospace;
 }
 
-*, *::before, *::after {
-    box-sizing: border-box;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
